# zero2prod

./: .env  Cargo.toml  configuration.yaml
migrations/: 20231003120323_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
