[package]
  edition = "2021"
  name    = "zero2prod"
  version = "0.1.0"

[lib]
  path = "src/lib.rs"

[[bin]]
  name = "zero2prod"
  path = "src/main.rs"

[dependencies]
  actix-web = "4"
  reqwest = { version = "0.11", features = [
    "json",
  ] }
  serde = { version = "1.0", features = [
    "alloc",
    "derive",
    "std",
  ] }
  serde_json = { version = "1.0.107" }
  sqlx = { version = "0.6", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
  ] }
  tokio = { version = "1.32", features = [
    "full",
  ] }
  config = {version = "0.13"}
  chrono = {default-features = false, features = ["clock"], version = "*"}
  uuid = {features = ["v4", "fast-rng"], version = "*"}
